<resources>
<string name="app_name">VoiceBack</string>
<string name="service_summary">Screen reader</string>
<string name="service_description">Your personal screen reader!</string>
<string name="service_enabled">VoiceBack On</string>
<string name="service_disabled">VoiceBack off</string>
<string name="state_collapsed">Collapsed.</string>
<string name="state_expanded">Expanded.</string>
<string name="state_selected">Selected.</string>
<string name="state_not_selected">Not selected.</string>
<string name="state_disabled">Disabled</string>
<string name="state_checked">Checked.</string>
<string name="state_not_checked">Not checked.</string>
<string name="state_on">On.</string>
<string name="state_off">Off.</string>
<string name="no_label">No label.</string>
<string name="tts_settings">Text To Speech Settings</string>
<string name="sound_and_vibration">Sound &amp; Vibration</string>
<string name="sound">Sound Feedback</string>
<string name="vibration">Vibration Feedback</string>
<string name="sound_volume">Sound Volume</string>
<string name="cancel">Cancel</string>
<string name="sound_theme">Sound Theme</string>
<string name="vibration_theme">Vibration Theme</string>
<string name="select_event">Event:</string>
<string name="select_sound">Sound:</string>
<string name="ok">OK</string>
<string name="play">Play</string>
<string name="close">Close</string>
<string name="default_value">Default</string>
<string name="vibration_intensity">Intensity:</string>
<string name="disable">Disable</string>
    <string name="drag_started">Drag Started</string>
    <string name="drag_cancelled">Drag Cancelled</string>
    <string name="drag_dropped">Drag Dropped</string>
<string name="gestures">Gestures</string>
<string name="gesture">Gesture:</string>
<string name="action">Action:</string>
<string name="display">Display:</string>
<string name="screen_hidden">Screen Hidden</string>
<string name="showing_screen">Showing Screen</string>
<string name="move_focus">Move focus</string>
<string name="unknown_error">Unknown error</string>
<string name="screen_backlight">Screen backlight</string>
<string name="voiceback_volume">VoiceBack volume</string>
    <string name="color_blue">Blue</string>
    <string name="color_yellow">Yellow</string>
    <string name="color_grey">Grey</string>
    <string name="color_red">Red</string>
    <string name="color_green">Green</string>
    <string name="color_magenta">Magenta</string>
<string name="focus_color">Focus color</string>
<string name="focus_thickness">Focus thickness</string>
<string name="customize_focus">Customize focus</string>
<string name="color_black">Black</string>
<string name="color_white">White</string>
    <string name="characters">Characters</string>
    <string name="words">Words</string>
    <string name="no_items">No items</string>
    <string name="paragraphs">Paragraphs</string>
<string name="space">Space</string>
<string name="new_line">New line</string>
<string name="customize_reading_controls">Customize reading controls</string>
<string name="add">Add</string>
    <string name="role_button">Button</string>
    <string name="role_switch">Switch</string>
    <string name="role_checkbox">Checkbox</string>
    <string name="role_radiobutton">Radio Button</string>
    <string name="role_heading">Heading</string>
    <string name="role_seekbar">SeekBar</string>
    <string name="role_progressbar">ProgressBar</string>
<string name="role_drop_down_list">Drop Down List</string>
<string name="role_edittext">Edit box</string>
<string name="role_image">Image</string>
<string name="quick_menu">Quick Menu</string>
<string name="app_settings">VoiceBack Settings</string>
<string name="customize_menu">Customize menu</string>
<string name="pass_through_system_gesture">Pass through system gesture</string>
<string name="tap">Tap</string>
<string name="tap_and_hold">Tap and hold</string>
<string name="adjust_slider">Adjust slider</string>
<string name="spoken_language">Spoken language</string>
<string name="speech_rate">Speech rate</string>
<string name="next_voice_language">Next voice language</string>
<string name="previous_voice_language">Previous voice language</string>
<string name="increase_speech_rate">Increase speech rate</string>
<string name="decrease_speech_rate">Decrease speech rate</string>
<string name="maximum">Maximum</string>
<string name="minimum">Minimum</string>
<string name="preferred_engine">Preferred engine</string>
<string name="speak_node_types">Speak node types</string>
<string name="speak_window_titles">Speak window titles</string>
<string name="verbosity">Verbosity</string>
<string name="window">Window:</string>
<string name="item_of_item_count">of</string>
<string name="deleted">Delete</string>
<string name="copy">Copy</string>
<string name="cut">Cut</string>
<string name="paste">Paste</string>
<string name="selection">Start or end selection mode</string>
<string name="select_all">Select all</string>
<string name="move_cursor_to_end">Move cursor to end</string>
<string name="move_cursor_to_start">Move cursor to start</string>
<string name="beginning_of_field">Beginning of field</string>
<string name="end_of_field">End of field</string>
<string name="not_editable">Not editable</string>
<string name="selection_cleared">Selection cleared</string>
<string name="selection_mode_on">Selection mode on</string>
<string name="selection_mode_off">Selection mode off</string>
<string name="unselected">Unselected</string>
<string name="move_to_another_window">Move to another window</string>
<string name="role_webview">Web View</string>
<string name="system_default">Default</string>
<string name="role_passwd">Password</string>
<string name="speak_passwords_as_you_type">Speak passwords as you type</string>
<string name="speak_node_ids">Speak node ids</string>
<string name="speak_pane_titles">Speak pane titles</string>
<string name="screen_off">Screen off</string>
<string name="announce_time_when_screen_turns_on">Announce time when screen turns on</string>
<string name="announce_date_when_screen_turns_on">Announce date when screen turns on</string>
<string name="orientation_landscape">Landscape</string>
<string name="orientation_portrait">Portrait</string>
<string name="notify_when_screen_turns_off">Notify when screen turns off</string>
<string name="notify_about_screen_orientation_change">Notify about screen orientation change</string>
<string name="speak_battery_level">Announce battery charge percentage when connecting/disconnecting the charger</string>
<string name="actions">Actions</string>
<string name="links">Links</string>
<string name="action_show_screen">Show screen</string>
<string name="action_hide_screen">Hide screen</string>
<string name="copied_to_clipboard">Copied to clipboard</string>
</resources>
