<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
style="@style/activity">
<LinearLayout
android:id="@+id/event_bar"
style="@style/first_line"
android:orientation="horizontal">
<TextView
android:text="@string/select_event"
android:layout_weight="0.5"
android:gravity="center"
style="@style/button"
android:layout_width="0dp"/>
<Spinner
android:id="@+id/event"
android:layout_weight="0.5"
android:gravity="center"
style="@style/button"
android:layout_width="0dp"/>
</LinearLayout>
<LinearLayout
android:id="@+id/sound_bar"
style="@style/first_line"
android:orientation="horizontal">
<TextView
android:text="@string/select_sound"
android:layout_weight="0.5"
android:gravity="center"
style="@style/button"
android:layout_width="0dp"/>
<Spinner
android:id="@+id/resource"
android:layout_weight="0.5"
android:gravity="center"
style="@style/button"
android:layout_width="0dp"/>
</LinearLayout>
<LinearLayout
android:id="@+id/tool_bar"
style="@style/first_line"
android:orientation="horizontal">
<Button
android:id="@+id/close"
android:text="@string/close"
android:layout_weight="0.5"
android:gravity="center"
style="@style/button"
android:layout_width="0dp"/>
<CheckBox
android:id="@+id/play"
android:text="@string/play"
android:layout_weight="0.5"
android:gravity="center"
style="@style/button"
android:layout_width="0dp"/>
</LinearLayout>
</LinearLayout>
